<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".login.presentation.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/divider_bottom"
        android:layout_marginBottom="36dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/login_imgView_logo"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="48dp"
            android:paddingStart="80dp"
            android:paddingEnd="80dp"
            android:src="@drawable/instagram_logo_black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/login_edit_text_email"
            style="@style/InstaFormEditText"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/login_edit_text_password"
            style="@style/InstaFormEditText"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_button_enter"
            style="@style/InstaFormButton"
            android:text="@string/enter" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <View
                style="@style/FormContainer"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:background="@color/gray_darker" />

            <TextView
                style="@style/InstaTextViewBase"
                android:layout_gravity="center"
                android:background="@color/white"
                android:padding="8dp"
                android:text="@string/or"
                android:textStyle="bold" />
        </FrameLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_button_enter_facebook"
            style="@style/InstaFormButton.Link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableStart="@drawable/facebook_logo"
            android:drawablePadding="8dp"
            android:text="@string/enter_with_facebook"
            android:textAllCaps="false" />
    </LinearLayout>

    <View
        android:id="@+id/divider_bottom"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignTop="@id/login_text_view_register"
        android:background="@color/gray_darker" />

    <TextView
        android:id="@+id/login_text_view_register"
        style="@style/InstaTextViewBase"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:gravity="center"
        android:padding="24dp"
        android:text="@string/does_not_have_account"
        android:textStyle="bold" />
</RelativeLayout>